Initial changes for Eureka Server and Client

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# Wy??czenie rejestracji samego siebie
+eureka.client.register-with-eureka=false
+spring.application.name=eureka-server
+eureka.client.fetch-registry=false
 
+# Port, na którym uruchomiony b?dzie serwer Eureka
+server.port=8761
+
+# Ustawienia dashboardu Eureka
+eureka.dashboard.enabled=true
+
+# Czas od?wie?ania rejestrów
+eureka.instance.lease-renewal-interval-in-seconds=10
+eureka.instance.lease-expiration-duration-in-seconds=30
+
+# Ustawienia logowania (opcjonalne)
+logging.level.com.netflix.eureka=OFF
+logging.level.com.netflix.discovery=OFF
